syntax = "proto3";

service Vioux {
  //
  rpc RequestFrame(RequestOptions) returns (RequestedFrame);

  //
  rpc UpdateFrame(RequestOptions) returns (UpdatedFrame);

  //
  rpc AppendFrame(RequestOptions) returns (AppendedFrame);

  //
  rpc RequestAudio(RequestOptions) returns (RequestedAudio);

  //
  rpc UpdateAudio(RequestOptions) returns (UpdatedAudio);
}

message RequestOptions {
  optional uint32 layer = 1;
  optional uint32 n = 2;
  optional Image image = 3;
  optional Audio audio = 4;
}

message RequestedFrame {
  uint32 layer = 1;
  uint32 n = 2;
  Image image = 3;
}

message AppendedFrame { string id = 1; }

message UpdatedFrame {}

message RequestedAudio {
  uint32 n = 1;
  Audio audio = 2;
}

message UpdatedAudio {}

enum ColorType {
  L8 = 0;  // Pixel is 8-bit luminance
  La8 = 1; // Pixel is 8-bit luminance with an alpha channel

  Rgb8 = 2;  // Pixel is 8-bit RGB
  Rgba8 = 3; // Pixel is 8-bit RGB with an alpha channel

  L16 = 4;  // Pixel is 16-bit luminance
  La16 = 5; // Pixel is 16-bit luminance with an alpha channel

  Rgb16 = 6;  // Pixel is 16-bit RGB
  Rgba16 = 7; // Pixel is 16-bit RGBA

  Rgb32F = 8;  // Pixel is 32-bit float RGB
  Rgba32F = 9; // Pixel is 32-bit float RGBA
}

message Image {
  bytes data = 1; // data is always returned in bytes, it's the client's job to
                  // convert to correct data type (e.g. from u8 to u16)
  string uuid = 2;
  ColorType color_type = 3;
  uint32 width = 4;
  uint32 height = 5;
  uint32 x = 6;
  uint32 y = 7;
}

message Audio {
  bytes data = 1; // data is always returned in bytes, it's the client's job to
                  // convert to correct data type (e.g. from u8 to u16)
  string uuid = 2;
  uint32 sample_rate = 3;
  uint32 sample_width = 4;
  uint32 channels = 5;
  string codec = 6;
}